--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,15 @@
     align-items: center;
     gap: 53px;
 }
+
+.error-h1 {
+    color: red;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+    font-weight: 800;
+    font-size: 30px;
+}
+
+.e-div {
+    height: 10px;
+}
